Impl add opens and add exports